:hammer: Fixed bug where footer was overlapping showdetails

--- a/src/components/EpisodeCard/EpisodeCard.module.scss
+++ b/src/components/EpisodeCard/EpisodeCard.module.scss
@@ -10,8 +10,6 @@
 
   &:hover {
     box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 2px 0px;
-    // box-shadow: none;
-    // border: none;
   }
   @include tablet {
     margin: 3px;
@@ -32,7 +30,7 @@
 
   &__image {
     border-radius: 5px 5px 0 0;
-    height: 10rem;
+    height: 12rem;
     width: 100%;
     background-size: cover;
     background-position: top;
