--- a/src/components/Layout/Footer.module.scss
+++ b/src/components/Layout/Footer.module.scss
@@ -1,7 +1,6 @@
 @use "../../styles/partials/variables" as *;
 
 .footer {
-  display: block;
   text-align: center;
   padding: 3rem 0;
   margin: 0;
