--- a/src/components/ShowDetails/ShowDetails.module.scss
+++ b/src/components/ShowDetails/ShowDetails.module.scss
@@ -71,7 +71,7 @@
 
   &__details {
     @include flex(column, flex-start, center);
-    height: 30rem;
+
     width: 100%;
     margin: 2rem 0;
     padding: 1rem 0;
